--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -23,3 +23,73 @@
     background-position: 0 0, 10px 10px;
     animation: twinkle 6s infinite;
 }
+
+@keyframes floatSlow {
+
+    0%,
+    100% {
+        transform: translateY(0);
+    }
+
+    50% {
+        transform: translateY(-30px);
+    }
+}
+
+@keyframes floatMedium {
+
+    0%,
+    100% {
+        transform: translateY(0);
+    }
+
+    50% {
+        transform: translateY(-35px);
+    }
+}
+
+@keyframes floatFast {
+
+    0%,
+    100% {
+        transform: translateY(0);
+    }
+
+    50% {
+        transform: translateY(-40px);
+    }
+}
+
+.floating-icon {
+    @apply absolute p-1 rounded-full bg-white/10 backdrop-blur-sm border border-white/20 shadow-lg text-white transition transform duration-1000 ease-in-out;
+    pointer-events: auto;
+}
+
+.animate-float-slow {
+    animation: floatSlow 6s ease-in-out infinite;
+}
+
+.animate-float-medium {
+    animation: floatMedium 4s ease-in-out infinite;
+}
+
+.animate-float-fast {
+    animation: floatFast 2.5s ease-in-out infinite;
+}
+
+@keyframes floatUp {
+
+    0%,
+    100% {
+        transform: translateY(0);
+    }
+
+    50% {
+        transform: translateY(-5px);
+    }
+}
+
+.social-icon {
+    @apply text-2xl md:text-4xl transition duration-300 ease-in-out hover:scale-110;
+    animation: floatUp 3s ease-in-out infinite;
+}
