--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -1,4 +1,3 @@
-@import "background.css";
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "./background.css";
+@import "tailwindcss";
+
